# rust-aws-sam-lambda

./: Build.ps1  Cargo.toml  README.md  docker-compose.yml  template.yaml
src/: bootstrap.rs
